--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -18,7 +18,7 @@
           </svg>
           S'inscrire avec Google
         <% end %>
-        <%= button_to user_apple_omniauth_authorize_path, method: :post, data: { turbo: false }, class: "button", style: "width: 100%; display: flex; justify-content: center; align-items: center; gap: 10px;" do %>
+        <%# <%= button_to user_apple_omniauth_authorize_path, method: :post, data: { turbo: false }, class: "button", style: "width: 100%; display: flex; justify-content: center; align-items: center; gap: 10px;" do 
           <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g clip-path="url(#clip0_751_15589)">
               <rect width="19.7419" height="19.7419" fill="white"/>
