--- a/app/views/admin/etablissements/edit.html.erb
+++ b/app/views/admin/etablissements/edit.html.erb
@@ -43,7 +43,7 @@
 
         <div>
           <%= form.label :uai, "Code UAI (non modifiable)" %>
-          <%= form.text_field :uai, readonly: true, disabled: true, style: "background-color: #eee;" %>
+          <%= form.text_field :uai %>
         </div>
 
         <div style="flex-direction: row; gap: 20px;">
