--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -105,6 +105,9 @@
   font-size: 20px;
   display: flex;
 }
+.subtitle-card a:hover {
+  text-decoration: underline;
+}
 
 .container-text-card {
   padding: 0 36px;
