--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -62,6 +62,9 @@
                   Feedbacks
                 <% end %>
               </li>
+             <li>
+  <%= link_to "Notifications", notifications_news_path, class: ("active" if @current_page == "notifications") %>
+</li>
             </ul>
           </nav>
           <div class="flex-btn-login">
