--- a/app/views/pages/add_elements.html.erb
+++ b/app/views/pages/add_elements.html.erb
@@ -54,7 +54,7 @@
         <%= t('add_references.buttons.designers') %>
       </div>
     <%end%>
-    <%# <%= link_to new_studio_path do 
+    <%= link_to new_studio_path do %>
       <div class="button-add">
         Studios
       </div>
