--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -63,8 +63,8 @@
                 <% end %>
               </li>
              <li>
-  <%= link_to "Notifications", notifications_news_path, class: ("active" if @current_page == "notifications") %>
-</li>
+                <%= link_to "Notifications", notifications_new_path, class: ("active" if @current_page == "notifications") %>
+              </li>
             </ul>
           </nav>
           <div class="flex-btn-login">
