--- a/app/assets/stylesheets/components/_cardref.scss
+++ b/app/assets/stylesheets/components/_cardref.scss
@@ -221,19 +221,14 @@ body.dark-mode {
 }
 
 .card-slider-blurred-bg {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 2;
-
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  filter: blur(15px) brightness(0.9);
-  transform: scale(1.15);
-  opacity: 0.8;
+  filter: blur(20px);
+  transform: scale(1.1);
 }
 
 .card-slider-slides {
