--- a/app/views/oeuvres/_ad_card.html.erb
+++ b/app/views/oeuvres/_ad_card.html.erb
@@ -1,7 +1,17 @@
 <% return unless local_assigns.key?(:ad) && ad.present? %>
-<%= link_to ad[:link], target: "_blank", class: "ad-card-link" do %>
+
+<%# Récupération de l'ID (adapte selon si ad est un Hash ou un Objet) %>
+<% ad_id = ad.is_a?(Hash) ? ad[:id] : ad.id %>
+
+<%# 1. Lien modifié pour pointer vers notre route de tracking "click" %>
+<%= link_to click_ad_path(ad_id), target: "_blank", class: "ad-card-link" do %>
+  
+  <%# 2. Script pour compter l'impression au chargement %>
+  <%# Cela appelle la route 'impression' sans bloquer l'affichage %>
+  <img src="<%= impression_ad_path(ad_id) %>" style="display:none;" alt="" aria-hidden="true" loading="eager">
+
   <div class="card ad-card">
-    <div class="bg-card" style="background-color: #52525D;">
+     <div class="bg-card" style="background-color: #52525D;">
       <div class="bg-img-card card-slider-wrapper" 
            data-controller="slider" 
            data-slider-update-background-value="true">
@@ -37,4 +47,4 @@
       <p class="description-card description-card-home"><%= ad[:description] %></p>
     </div>
   </div>
- <% end %>
+<% end %>
