--- a/app/views/oeuvres/_oeuvre.html.erb
+++ b/app/views/oeuvres/_oeuvre.html.erb
@@ -19,6 +19,9 @@
     outline: 0;
     background-color: rgba(0, 0, 0, 0.5);
   }
+  .modal-image .modal-content{
+    height: 90dvh;
+  }
   .modal.show { display: flex; }
   .modal-dialog {
     position: relative;
@@ -56,6 +59,9 @@
     border-top: 1px solid #dee2e6;
   }
   #closeImageModal {
+    position: absolute;
+    top: 24px;
+    right: 2vw;
     color: #202020;
     font-size: 24px;
   }
@@ -492,22 +498,17 @@
     </div>
     
     <%# --- MODALE DU SLIDER D'IMAGES (CORRIGÉE) --- %>
-    <div class="modal fade" id="imageSliderModal" tabindex="-1" role="dialog" aria-labelledby="imageSliderModalLabel" 
+    <div class="modal modal-image fade" id="imageSliderModal" tabindex="-1" role="dialog" aria-labelledby="imageSliderModalLabel" 
          aria-hidden="true" 
          data-controller="image-modal-slider" 
          data-image-modal-slider-image-count-value="<%= @oeuvre.oeuvre_images.count %>" 
          style="display: none;">
       
-      <div class="modal-dialog modal-xl modal-dialog-centered" role="document" style="max-width: 90vw;">
+      <div class="modal-dialog" role="document" style="max-width: 90vw;">
         <div class="modal-content">
-          <div class="modal-header border-0 pb-0">
-            <h5 class="modal-title visually-hidden" id="imageSliderModalLabel">Images de <%= @oeuvre.nom_oeuvre %></h5>
-            <button type="button" class="close" id="closeImageModalBtn" data-dismiss="modal" aria-label="Fermer" data-action="click->image-modal-slider#closeModal">
-               <svg class="close-popup" id="closePopup" width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M19.9941 16.9964L33.3719 3.63981C33.7717 3.23995 33.9964 2.69763 33.9964 2.13215C33.9964 1.56667 33.7717 1.02435 33.3719 0.624492C32.972 0.224637 32.4297 0 31.8642 0C31.2987 0 30.7564 0.224637 30.3566 0.624492L17 14.0023L3.64343 0.624492C3.24358 0.224637 2.70125 5.02059e-07 2.13577 5.06273e-07C1.57029 5.10486e-07 1.02797 0.224637 0.628116 0.624492C0.228261 1.02435 0.00362441 1.56667 0.00362441 2.13215C0.0036244 2.69763 0.228261 3.23995 0.628116 3.63981L14.0059 16.9964L0.628116 30.3529C0.429087 30.5504 0.271115 30.7852 0.163309 31.044C0.055504 31.3027 0 31.5803 0 31.8606C0 32.1409 0.055504 32.4185 0.163309 32.6772C0.271115 32.936 0.429087 33.1709 0.628116 33.3683C0.825519 33.5673 1.06038 33.7253 1.31914 33.8331C1.5779 33.9409 1.85545 33.9964 2.13577 33.9964C2.4161 33.9964 2.69364 33.9409 2.95241 33.8331C3.21117 33.7253 3.44603 33.5673 3.64343 33.3683L17 19.9905L30.3566 33.3683C30.554 33.5673 30.7888 33.7253 31.0476 33.8331C31.3064 33.9409 31.5839 33.9964 31.8642 33.9964C32.1445 33.9964 32.4221 33.9409 32.6809 33.8331C32.9396 33.7253 33.1745 33.5673 33.3719 33.3683C33.5709 33.1709 33.7289 32.936 33.8367 32.6772C33.9445 32.4185 34 32.1409 34 31.8606C34 31.5803 33.9445 31.3027 33.8367 31.044C33.7289 30.7852 33.5709 30.5504 33.3719 30.3529L19.9941 16.9964Z" fill="#202020"/>
-              </svg>
-            </button>
-          </div>
+          <svg class="close-popup" id="closeImageModal" data-action="click->image-modal-slider#closeModal" width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M19.9941 16.9964L33.3719 3.63981C33.7717 3.23995 33.9964 2.69763 33.9964 2.13215C33.9964 1.56667 33.7717 1.02435 33.3719 0.624492C32.972 0.224637 32.4297 0 31.8642 0C31.2987 0 30.7564 0.224637 30.3566 0.624492L17 14.0023L3.64343 0.624492C3.24358 0.224637 2.70125 5.02059e-07 2.13577 5.06273e-07C1.57029 5.10486e-07 1.02797 0.224637 0.628116 0.624492C0.228261 1.02435 0.00362441 1.56667 0.00362441 2.13215C0.0036244 2.69763 0.228261 3.23995 0.628116 3.63981L14.0059 16.9964L0.628116 30.3529C0.429087 30.5504 0.271115 30.7852 0.163309 31.044C0.055504 31.3027 0 31.5803 0 31.8606C0 32.1409 0.055504 32.4185 0.163309 32.6772C0.271115 32.936 0.429087 33.1709 0.628116 33.3683C0.825519 33.5673 1.06038 33.7253 1.31914 33.8331C1.5779 33.9409 1.85545 33.9964 2.13577 33.9964C2.4161 33.9964 2.69364 33.9409 2.95241 33.8331C3.21117 33.7253 3.44603 33.5673 3.64343 33.3683L17 19.9905L30.3566 33.3683C30.554 33.5673 30.7888 33.7253 31.0476 33.8331C31.3064 33.9409 31.5839 33.9964 31.8642 33.9964C32.1445 33.9964 32.4221 33.9409 32.6809 33.8331C32.9396 33.7253 33.1745 33.5673 33.3719 33.3683C33.5709 33.1709 33.7289 32.936 33.8367 32.6772C33.9445 32.4185 34 32.1409 34 31.8606C34 31.5803 33.9445 31.3027 33.8367 31.044C33.7289 30.7852 33.5709 30.5504 33.3719 30.3529L19.9941 16.9964Z" fill="#202020"/>
+          </svg>
           
           <div class="modal-body pt-0" style="position: relative;">
             
@@ -518,7 +519,7 @@
                   <div class="slider-slide-wrapper <%= 'active' if index == 0 %>" data-slider-target="slide">
                     <img src="<%= url_for(oeuvre_image.file) %>" 
                         alt="<%= @oeuvre.nom_oeuvre %> - Image <%= index + 1 %>" 
-                        style="width: 100%; height: auto; display: block; max-height: 80vh; object-fit: contain;">
+                        style="width: 100%; height: auto; display: block; max-height: 75vh; object-fit: contain;">
                   </div>
                 <% end %>
               </div>
@@ -550,7 +551,7 @@
 
             </div>
             
-            <div class="image-credits-container" style="text-align: center; margin-top: 15px;">
+            <div class="image-credits-container" style="text-align: center;">
               <% @oeuvre.oeuvre_images.each_with_index do |oeuvre_image, index| %>
                 <p class="image-credit <%= 'active-credit' if index == 0 %>" 
                    data-credit-index="<%= index %>" 
